# app_datamad

./: .gitignore  .gitlab-ci.yml  DataMad_csv_create.py  Dockerfile  Dockerfile_debug  MANIFEST.in  README.md  catalog-info.yaml  manage.py  mkdocs.yaml  pyproject.toml  requirements.txt  setup.py  temp_not_used_pyproject.toml
datamad2/: TFS_Siebel_hybrid_parent_child.yaml  admin.py  create_issue.py  search_indexes.py  signals.py  tables.py  utils.py
datamad2/forms/: data_product.py  grant.py  search.py
datamad2/haystack_es_8_mod/: elasticsearch8_backend.py
datamad2/management/commands/: facilities_rollback.py  import_databank.py
datamad2/migrations/: 0013_auto_20240704_1140.py  0014_importedgrant_ukri_ref.py  0015_rename_ukri_ref_importedgrant_nerc_id.py  0016_importedgrant_ukri_id.py  0017_jiraissuetype_nerc_id_field.py  0018_alter_importedgrant_facility.py  0019_alter_importedgrant_routing_classification_and_more.py  0020_importedgrant_data_management_and_more.py
datamad2/models/: databank.py  document_store.py  grants.py  jira.py  users.py
datamad2/staticfiles/: staticfiles.json
datamad2/staticfiles/cookielaw/css/: cookielaw.3b536aa08b29.css.br  cookielaw.css.br
datamad2/staticfiles/cookielaw/js/: cookielaw.js.br
datamad2/staticfiles/cors/: postmessage.html.br  result.html.br
datamad2/staticfiles/css/: grants.css.br  jquery-ui-demo-ie8.e0acb45c9712.css.br  jquery-ui-demo.css.br  jquery.fileupload-noscript.77b97d2b0365.css.br  jquery.fileupload-ui-noscript.f95c01176c6a.css.br  jquery.fileupload-ui.css.br  jquery.fileupload-ui.dc60cb034c5f.css.br  jquery.fileupload.css.br  style.css.br
datamad2/staticfiles/demo/: blueimp-gallery.44c32b90a007.css  blueimp-gallery.44c32b90a007.css.br  blueimp-gallery.css.br  blueimp-gallery.min.8da8a6f0432d.css  blueimp-gallery.min.8da8a6f0432d.css.br  blueimp-gallery.min.css.br  jquery.blueimp-gallery.4e77669fb09c.js.br  jquery.blueimp-gallery.min.dc8598c031f8.js.br  tmpl.min.js.br
datamad2/staticfiles/extra_data_centres/css/: bodc.d26d8aad7833.css.br  edc.808562f13e02.css.br  eds.8c40b7e19f4a.css.br  eidc.css.br  ngdc.css.br  pdc.css.br  sparc.c940e5a662ee.css  sparc.c940e5a662ee.css.br  sparc.css.br  ssdc.css.br
datamad2/staticfiles/extra_data_centres/img/: eds.aecb46b8dc15.svg.br
datamad2/staticfiles/fwtheme_django/css/: fw-custom.4930fab508f8.css.br
datamad2/staticfiles/js/: app.cf8359076bf2.js.br  claim_button.cfd182e43721.js.br  get_cookie.js.br  jquery.fileupload-angular.js.br  jquery.fileupload-audio.a7234dfb696e.js.br  jquery.fileupload-jquery-ui.253cd8d55b22.js.br  jquery.fileupload-ui.js.br  jquery.fileupload-video.js.br  jquery.fileupload.js.br  main.js.br  see_more.0c440949b4a0.js.br  show_hide_grants.f413de9929cb.js.br  table_sorter.js.br
datamad2/staticfiles/js/cors/: jquery.postmessage-transport.js.br  jquery.xdr-transport.8a21ee58e9eb.js.br
datamad2/staticfiles/orgtheme/demo/: index.f6023cb45869.html.br
datamad2/templates/datamad2/: base.html  grant_detail.html  grant_detail_history.html
datamad2/templatetags/: facet_filter_tags.py
datamad2/views/: documents.py  grant.py  home.py
datamad2_api/: urls.py
datamadsite/: settings.py  settings_local.py.tmpl  urls.py
service-docs/: index.md
(+7 files in other folders)
